- fix problem with title where team name appeared twice

--- a/src/templates/en_CA/Team/edit_confirm.tmpl
+++ b/src/templates/en_CA/Team/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="common/basic_header.tmpl"}
-<h1>{$page_title}{if $id}: {$team_name}{/if}</h1>
+<h1>{if $id}Editing {$team_name}{else}Create New Team{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
 </p>
