- fix URL for "Change Password", as it now requires a user ID.

--- a/src/templates/en_CA/Menu.tmpl
+++ b/src/templates/en_CA/Menu.tmpl
@@ -10,7 +10,7 @@
     <td class="menu_item"><a href='{$app_cgi_location}?op=person_view&id={$user_id}'>View/Edit My Account</a></td>
   </tr>
   <tr>
-    <td class="menu_item"><a href='{$app_cgi_location}?op=person_changepassword'>Change Password</a></td>
+    <td class="menu_item"><a href='{$app_cgi_location}?op=person_changepassword&id={$user_id}'>Change Password</a></td>
   </tr>
   <tr>
     <td class="menu_item"><a href='{$app_cgi_location}?op=logout'>Log Out</a></td>
