--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -19,6 +19,10 @@
     <td class='row_title'>Day(s):</td> 
     <td class='row_data'>{$league_day}</a></td>
   </tr>
+  <tr>
+    <td class='row_title'>Tier:</td> 
+    <td class='row_data'>{$league_tier}</a></td>
+  </tr>
   {if $league_allow_schedule == 'Y'}
   <tr>
     <td class='row_title'>Current Round:</td> 
