Implement fetching of team captain email addresses for a league.

--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -51,7 +51,7 @@
   {/if}
   {if $perm_administer_league}
 		| <a href="{$app_cgi_location}?op=league_edit&id={$league_id}">edit info</a>
-		| <a href="{$app_cgi_location}?op=league_captemails&id={$league_id}">fetch captain emails</a>
+		| <a href="{$app_cgi_location}?op=league_captemail&id={$league_id}">fetch captain emails</a>
   {/if}
   |	
 	</p>
