Last one before heading to bed... this adds the ability to reset a forgotten password to some randomly generated string when given a Member ID, username, or email address.  New password is mailed to the email address on file.  Partially tested.

--- a/src/templates/en_CA/Login.tmpl
+++ b/src/templates/en_CA/Login.tmpl
@@ -22,7 +22,7 @@
 	<td colspan='2' align='center' valign='middle'>
 		<input type='submit' name='submit' value='Log In'>
     <br>
-    <a href="{$app_cgi_location}?op=person_resetpw">Forgot your password?</a> | <A HREF="{$app_cgi_location}?op=person_create">Create New Account</a>
+    <a href="{$app_cgi_location}?op=person_forgotpassword">Forgot your password?</a> | <A HREF="{$app_cgi_location}?op=person_create">Create New Account</a>
   </td>
 </tr>
 </table>
