- view operation should be "person_view", not "player_view"

--- a/src/templates/en_CA/Team/add_player_list.tmpl
+++ b/src/templates/en_CA/Team/add_player_list.tmpl
@@ -16,7 +16,7 @@
 	<td>{$each.value}</td>
 	<td> 
   [
-    <a href="{$app_cgi_location}?op=player_view&id={$each.id_val}">view</a>
+    <a href="{$app_cgi_location}?op=person_view&id={$each.id_val}">view</a>
     | <a href="{$app_cgi_location}?op=team_playerstatus&id={$id}&player_id={$each.id_val}&step=confirm&status=captain_request">add player</a>
   ]
 	</td>
