--- a/src/templates/en_CA/Person/view.tmpl
+++ b/src/templates/en_CA/Person/view.tmpl
@@ -73,6 +73,19 @@
     <td class='row_data'>{$year_started|escape}</td>
   </tr>
   {/if}
+  
+  <tr>
+    <td class="row_title">Show email:</td>
+    <td class="row_data">
+      {$allow_publish_email}
+    </td>
+  </tr>
+  <tr>
+    <td class="row_title">Show phone:</td>
+    <td class="row_data">
+      {$allow_publish_phone}
+    </td>
+  </tr>
 
   {if $class}
   <tr>
