Add support for moving teams between leagues.  Coordinators can move teams between leagues they manage, and admin can move any team anywhere.

--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -70,8 +70,8 @@
     | <a href="{$app_cgi_location}?op=team_join&id={$team.id}">join team</a>
     {/if}
     {if $perm_administer_league}
-      | <a href="{$app_cgi_location}?op=team_move&id={$team.id}">move team</a>
-      | <a href="{$app_cgi_location}?op=team_move&league_to=1&id={$team.id}&league_id={$league_id}">deactivate</a>	
+      | <a href="{$app_cgi_location}?op=league_moveteam&id={$league_id}&team_id={$team.id}">move team</a>
+      | <a href="{$app_cgi_location}?op=league_moveteam&id={$league_id}&team_id={$team.id}&target_id=1&step=confirm">deactivate team</a>
       {if $team.league_status != 'confirmed'}
         | <a href="{$app_cgi_location}?op=league_addteam&id={$league_id}&team_id={$team.id}">confirm</a>
       {/if}
