Add support for submitting scores (captains) and approving submissions (coordinators).  This is a straight port of the old functionality with some bugs removed, so it does not (yet) properly deal with defaults.

--- a/src/templates/en_CA/Team/schedule_view.tmpl
+++ b/src/templates/en_CA/Team/schedule_view.tmpl
@@ -37,7 +37,7 @@
         {if $game.score_type == 'entered'}
           (unofficial, waiting for opponent)
         {else}
-          [ <a href="{$app_cgi_location}?op=game_submitscore&id={$game.id}&team={$team_id}">submit score</a> ]
+          [ <a href="{$app_cgi_location}?op=game_submitscore&id={$game.id}&team_id={$team_id}">submit score</a> ]
         {/if}
       {/if}
     </td>
