Ensure that team captains can see the contact info for the players on their teams.  Also, add a warning to this effect on the 'edit user' page.

--- a/src/templates/en_CA/Person/edit_form.tmpl
+++ b/src/templates/en_CA/Person/edit_form.tmpl
@@ -161,7 +161,6 @@
       </td>
     </tr>
     {/if}
-    
     <tr>
       <td colspan=2>May we list your email address for other members to see?  
       {if $allow_publish_email == "Y"}
@@ -182,6 +181,13 @@
         <input type="radio" name="allow_publish_phone" value="Y"> Yes /  
         <input type="radio" name="allow_publish_phone" value="N" checked> No <br>
       {/if}
+      </td>
+    </tr>
+    <tr>
+      <td colspan='2'>Note that the above settings only apply to regular
+      members.  Your team captain will always be able to see your email address
+      and telephone numbers.  As well, if you are a team captain, your email
+      and telephone numbers will be available to other players.
       </td>
     </tr>
 	</table>
