Add waiver form text, demographic survey

--- a/src/templates/en_CA/Person/waiver_form.tmpl
+++ b/src/templates/en_CA/Person/waiver_form.tmpl
@@ -1,14 +1,49 @@
 {include file="common/basic_header.tmpl"}
-<h1>{$page_title}</h1>
-
+<h1>Informed Consent Form For League Play</h1>
 <p>
-  Do you agree to abide by the following conditions:
-    <ol>
-      <li>
-      <li>
-      <li>
-    </ol>
+You must agree to abide by the following waiver in order to activate your
+account:
 </p>
+<blockquote>
+<p>
+I, as a member of and player participating in OCUA's Ultimate League in the
+Ottawa area, acknowledge that there is a risk of being injured while playing
+the game of ultimate and that OCUA does not warrant or guarantee the quality or
+condition of ultimate playing fields and other facilities, and, accordingly, I
+agree that I will not conduct myself in a dangerous or reckless manner while
+participating in the game of ultimate, will comply with the rules of the game
+of ultimate and will, and do hereby, accept full responsibility for the risk of
+any personal injury or harm experienced by me or caused by me to others while
+playing or participating in the game of ultimate.
+</p>
+<p>
+I acknowledge that OCUA occasionally issues directions, orders and regulations
+for the use of playing fields and other facilities, for the rules of play for
+the game of ultimate and for the conduct of members and others while on or
+about the ultimate playing fields and that such directions, orders and
+regulations are reasonable, and, accordingly, I hereby agree to comply with all
+such directions, orders and regulations issued by OCUA.
+</p>
+<p>
+I, in consideration of my membership in OCUA and my participation in ultimate
+games, do hereby release and forever discharge OCUA, its directors, officers,
+employees, volunteers and other representatives from any and all damages, costs
+and claims for any present or future injury, however grievous or serious it may
+be, which I may suffer or which any person under my care may suffer as a result
+of or arising from my participation in the game of ultimate and my use of any
+facility of OCUA and, further, I do hereby agree to indemnify and save OCUA,
+its directors, officers and employees harmless from and against any and all
+such damages, costs and claims whatsoever and from and against any and all
+damages, costs and claims whatsoever which may arise from or as a result of any
+injury, however grievous or serious it may be, which I may negligently or
+wilfully cause to others during my participation in the game of ultimate and my
+use of any facility of OCUA. 
+</p>
+<p>
+I agree to play fairly and by the rules, having regard to the safety and the
+enjoyment of other members.
+</p>
+</blockquote>            
 
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
