--- a/src/templates/en_CA/Person/survey_form.tmpl
+++ b/src/templates/en_CA/Person/survey_form.tmpl
@@ -1,19 +1,18 @@
 {include file="common/basic_header.tmpl"}
-<h1>{$page_title}</h1>
+<h1>Member Survey</h1>
 <blockquote>
 <p>
-  To help with OCUA's efforts to better serve the players of the league, please
-  answer the following questions.  The statistics compiled from these answers
-  will be used to shape future policy, help guide field search efforts, and to
-  provide some demographic information about OCUA's membership for use when
-  lobbying various levels of government, and courting sponsors to support
-  Ultimate.
+To help with OCUA's efforts to better serve the players of the league, please
+answer the following questions.  The statistics compiled from these answers
+will be used to provide some demographic information about OCUA's membership
+for use when lobbying various levels of government, and courting sponsors to
+support Ultimate.
 </p>
 <p>
   You will only be asked for this information once a year, when you reactivate
-  your account.  None of this information will be associated with your OCUA
-  user account or traceable to your identity in any way, nor will the raw data
-  be distributed to anyone.
+your account.  This information is stored separately from your user account,
+and will never be associated with your OCUA user account or traceable to your
+identity in any way.
 </p>
 <p>
   Note that all questions are voluntary and you may choose not to answer some
@@ -43,26 +42,17 @@
       
     <tr>
       <td>Children:</td>
-      <td><select name='demographics[children]'>
+      <td><select name='demographics[num_children]'>
         <option value='---'>Not Specified
-        <option value='0'>zero
-        <option value='1'>1
-        <option value='2'>2
-        <option value='3'>3
-        <option value='4'>4
-        <option value='4ormore'>more than 4
+        <option>0
+        <option>1
+        <option>2
+        <option>3
+        <option>4
+        <option>more than 4
       </select</td>
     </tr>
 
-    <tr>
-      <td>Marital Status:</td>
-      <td><select name='demographics[maritalstatus]'>
-        <option value='---'>Not Specified
-        <option value='single'>Single
-        <option value='married'>Married
-      </select></td>
-    </tr>
-    
     <tr>
       <td>Highest level of education completed:</td>
       <td><select name='demographics[education]'>
@@ -79,7 +69,7 @@
 
     <tr>
       <td>Field of expertise or employment:</td>
-      <td><select name='demographics[expertise]'>
+      <td><select name='demographics[field]'>
         <option value='---'>Not Specified
         <option>Administration
         <option>Advertising / Marketing / Public Relations
@@ -108,80 +98,44 @@
     </tr>
     
     <tr>
-      <td>I live in the area of:</td>
-      <td><select name='demographics[area_live]'>
-        <option value='---'>Not Specified
-        <option value='centralottawa'>Central Ottawa (inside the Ottawa River / Rideau River / Island Park Drive area)
-        <option value='gatineauhull'>Gatineau / Hull / Aylmer
-        <option value='innereast'>Inside Greenbelt - East (From Rideau River east to Greenbelt)
-        <option value='innerwest'>Inside Greenbelt - West (From Rideau River / Island Park west to Greenbelt)
-        <option value='west'>West (Kanata, Stittsville)
-        <option value='east'>East (Orleans)
-        <option value='southwest'>Southwest (Barrhaven, Manotick)
-        <option value='ruralwest'>Rural West (South of Barrhaven, west of Rideau River)
-        <option value='ruraleast'>Rural East (South of Greenbelt, east of Rideau River)
-      </select></td>
-    </tr>
-		
-    <tr>
-      <td>I work in the area of:</td>
-      <td><select name='demographics[area_work]'>
-        <option value='---'>Not Specified
-        <option value='centralottawa'>Central Ottawa (inside the Ottawa River / Rideau River / Island Park Drive area)
-        <option value='gatineauhull'>Gatineau / Hull / Aylmer
-        <option value='innereast'>Inside Greenbelt - East (From Rideau River east to Greenbelt)
-        <option value='innerwest'>Inside Greenbelt - West (From Rideau River / Island Park west to Greenbelt)
-        <option value='west'>West (Kanata, Stittsville)
-        <option value='east'>East (Orleans)
-        <option value='southwest'>Southwest (Barrhaven, Manotick)
-        <option value='ruralwest'>Rural West (South of Barrhaven, west of Rideau River)
-        <option value='ruraleast'>Rural East (South of Greenbelt, east of Rideau River)
-      </select></td>
-    </tr>
-
-    <tr>
-      <td>I spend the following amount on sports activities:</td>
-      <td><select name='demographics[sports_spending]'>
-        <option value='---'>Not Specified
-        <option value='0to100'>Less than $100
-        <option value='100to500'>$100 to $499
-        <option value='500to1000'>$500 to $999
-        <option value='1000plus'>$1000 and over
-      </select></td>
-    </tr>
-    
-    <tr>
       <td>I prefer to communicate in:</td>
       <td><select name='demographics[language]'>
         <option value='---'>Not Specified
         <option value='en'>English
         <option value='fr'>French
-        <option value='other'>Other
+        <option value='enfr'>Either/Or
       </select></td>
+    </tr>
+    
+    <tr>
+      <td valign='top'>I also take part in (check all that apply):</td>
+      <td>
+        <label><input type='checkbox' name='demographics[other_sports][]' value='baseball'>Baseball / Softball</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='basketball'>Basketball</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='canoeing'>Canoeing/Kayaking</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='cricket'>Cricket</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='curling'>Curling</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='discgolf'>Disc Golf</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='skisnowboard'>Downhill Skiing/Snowboarding</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='football'>Football</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='goaltimate'>Goaltimate</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='golf'>Golf</label><br />
+      </td>
+      <td>
+        <label><input type='checkbox' name='demographics[other_sports][]' value='camping'>Hiking/Camping</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='hockey'>Hockey</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='indoorsoccer'>Indoor Soccer</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='biking'>Mountain Biking/Cycling</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='racquet'>Racquet Sports</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='rockclimbing'>Rock Climbing</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='rugby'>Rugby</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='running'>Running</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='soccer'>Soccer</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='volleyball'>Volleyball</label><br />
+        <label><input type='checkbox' name='demographics[other_sports][]' value='xcskiing'>X-Country Skiing</label><br />
+      </td>
     </tr>
         
-    <tr>
-      <td>I play league ultimate:</td>
-      <td><select name='demographics[ultydays]'>
-        <option value='---'>Not Specified
-        <option value='1'>Once a week
-        <option value='2'>2 times a week
-        <option value='3'>3 times a week
-        <option value='4'>4 times a week
-        <option value='5'>5 times a week
-        <option value='6'>6 times a week (liar!)
-      </select></td>
-    </tr>
-
-    <tr>
-      <td valign='top'>I think OCUA's top priority for the next two years should be:</td>
-      <td valign='top'>
-        <label><input type='radio' name='demographics[priority]' value='---'>No answer</label><br />
-        <label><input type='radio' name='demographics[priority]' value='fieldquality'>More good quality fields, even if they're outside the greenbelt</label><br />
-		    <label><input type='radio' name='demographics[priority]' value='fieldlocation'>More fields in-city, even if they're lower quality</label><br />
-		    <label><input type='radio' name='demographics[priority]' value='regionalleague'>Splitting the league along regional lines so I can play closer to home/work</label><br />
-      </select></td>
-    </tr>
   </table>
   <input type='submit' name='submit' value='Submit'>
   <input type='reset' name='reset' value='Reset'>
