--- a/src/templates/en_CA/common/basic_footer.tmpl
+++ b/src/templates/en_CA/common/basic_footer.tmpl
@@ -3,5 +3,8 @@
 <div align="right">
 <i>Powered by <a href="http://www.dmo.ca/projects/leaguerunner/">Leaguerunner</a></i>
 </div>
+    </td>  
+  </tr>
+</table>
 </body>
 </html>
