Add link to privacy policy on all user-entered forms

--- a/src/templates/en_CA/Person/edit_form.tmpl
+++ b/src/templates/en_CA/Person/edit_form.tmpl
@@ -8,6 +8,10 @@
 <p>
   {$instructions}
 </p>
+<p>
+If you have concerns about the data OCUA collects, please see our 
+<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
+</p>
 
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
