--- a/src/templates/en_CA/Person/waiver_form.tmpl
+++ b/src/templates/en_CA/Person/waiver_form.tmpl
@@ -2,7 +2,11 @@
 <h1>Informed Consent Form For League Play</h1>
 <p>
 You must agree to abide by the following waiver in order to activate your
-account:
+account.
+</p>
+<p>
+If you have concerns about the data OCUA collects, please see our 
+<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
 </p>
 <blockquote>
 <p>
