--- a/src/templates/en_CA/Person/dog_waiver_form.tmpl
+++ b/src/templates/en_CA/Person/dog_waiver_form.tmpl
@@ -2,7 +2,11 @@
 <h1>Informed Consent Form For Dog Owners</h1>
 <p>
 Since you have stated your desire to bring your dog to the field, you must
-agree to abide by the following waiver in order to activate your account:
+agree to abide by the following waiver in order to activate your account.
+</p>
+<p>
+If you have concerns about the data OCUA collects, please see our 
+<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
 </p>
 <blockquote>
 <p>
