Add instructions on entering area code w/ phone number

--- a/src/templates/en_CA/Person/edit_form.tmpl
+++ b/src/templates/en_CA/Person/edit_form.tmpl
@@ -99,8 +99,9 @@ If you have concerns about the data OCUA collects, please see our
     </tr>
     
     <tr>
-      <td class='row_title' valign='top'>Phone Numbers:</td> 
+      <td class='row_title' valign='top'>Phone Numbers:</td>
       <td class='row_data'>
+        Please enter in the format of <b>(NNN) NNN-NNNN</b> or <b>(NNN) NNN-NNNN x NNN</b><br /> 
         {if $perm_edit_phone}
 		    <input type='text' name='home_phone' size='25' value='{$home_phone}'> (home)<br />
 		    <input type='text' name='work_phone' size='25' value='{$work_phone}'> (work)<br />
