--- a/src/templates/en_CA/Menu.tmpl
+++ b/src/templates/en_CA/Menu.tmpl
@@ -13,6 +13,12 @@
     <td class="menu_item"><a href='{$app_cgi_location}?op=person_changepassword&id={$user_id}'>Change Password</a></td>
   </tr>
   <tr>
+    <td class="menu_item"><a href='{$app_cgi_location}?op=system_viewfile&file=player_waiver'>View Player Waiver</a></td>
+  </tr>
+  <tr>
+    <td class="menu_item"><a href='{$app_cgi_location}?op=system_viewfile&file=dog_waiver'>View Dog Waiver</a></td>
+  </tr>
+  <tr>
     <td class="menu_item"><a href='{$app_cgi_location}?op=logout'>Log Out</a></td>
   </tr>
 
