--- a/src/templates/en_CA/Person/dog_waiver_form.tmpl
+++ b/src/templates/en_CA/Person/dog_waiver_form.tmpl
@@ -40,7 +40,7 @@ directors, officers, and employees harmless from any such damages, costs and
 claims. 
 </p>
 </blockquote>            
-
+{if not $view_only}
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
 	<input type="hidden" name="step" value="{$page_step}">
@@ -55,5 +55,6 @@ claims.
   <input type="submit" name="submit" value="Submit">
   <input type="reset" name="reset" value="Reset">
 </form>
+{/if}
 {include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
