--- a/src/templates/en_CA/Person/waiver_form.tmpl
+++ b/src/templates/en_CA/Person/waiver_form.tmpl
@@ -48,7 +48,7 @@ I agree to play fairly and by the rules, having regard to the safety and the
 enjoyment of other members.
 </p>
 </blockquote>            
-
+{if not $view_only}
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
 	<input type="hidden" name="step" value="{$page_step}">
@@ -63,5 +63,6 @@ enjoyment of other members.
   <input type="submit" name="submit" value="Submit">
   <input type="reset" name="reset" value="Reset">
 </form>
+{/if}
 {include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
